api-builder/k8s/nginx-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  labels:
    app: nginx-proxy
spec:
  type: ClusterIP
  ports:
    - name: server
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: nginx-proxy
