api-builder/k8s/nodeserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeserver
  labels:
    app: nodeserver
spec:
  type: ClusterIP
  ports:
    - name: node-server
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: nodeserver
