api-builder/k8s/api-build-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-proxy
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api-builder.localhost.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-proxy
          servicePort: 8081
